# colli_parser

./: .gitignore  README.md  api_client.py  app.py  config.py  invoice_parser.py  pyproject.toml  test_round.ipynb  utils.py
.github/workflows/: deploy_function_app.yml
function_app/webhook/: __init__.py  api_client.py  app.py  config.py  invoice_parser.py  models.py  requirements.txt  test_app.py
function_app/webhook/webhook/: __init__.py
infra/: azure.bicep  colliparser_params.bicep.bicepparam
notebooks/: api_client.ipynb  check_output.ipynb  pdf_to_jpg.ipynb  test_splitwise.ipynb
webhook/: .dockerignore  .funcignore  api_client.py  app.py  blob_utils.py  invoice_parser.py  models.py  requirements.txt  setup.py  test_app.py
webhook/docker/: function.docker-compose.yaml  function.dockerfile
webhook/webhook/: __init__.py  function.json
